plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'stirling.software'
version = '0.7.0'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.6'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.0.6'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.6'
	// https://mvnrepository.com/artifact/org.apache.pdfbox/jbig2-imageio
	implementation group: 'org.apache.pdfbox', name: 'jbig2-imageio', version: '3.0.4'
	implementation 'commons-io:commons-io:2.11.0'
	
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    
	//general PDF
    implementation 'org.apache.pdfbox:pdfbox:2.0.28'
    developmentOnly("org.springframework.boot:spring-boot-devtools")

}

jar {
    enabled = false
    manifest {
        attributes 'Implementation-Title': 'Stirling-PDF',
                   'Implementation-Version': project.version
    }
    
}

tasks.named('test') {
	useJUnitPlatform()
}

task printVersion {
  println project.version
}
